--- a/style/style.scss
+++ b/style/style.scss
@@ -29,6 +29,11 @@ header{
     @media all and (max-width: 1000px){
         position: initial;
         padding-top:15px;
+        a{
+            color: rgb(105, 105, 105);
+            background-color: black;
+            padding: 20px !important;
+        }
     }
 }
 #nav_name{
@@ -89,7 +94,7 @@ header{
 
 // A PROPOS
 #section_A_PROPOS{
-    background-color: rgb(66, 66, 66);
+    background-color: rgb(36, 36, 36);
     color: rgb(206, 205, 205);
     h2{
         font-family: 'Quicksand', sans-serif;
@@ -128,6 +133,11 @@ header{
         display: inline-block;
         margin: 0;
         padding: 0;
+        @media all and (max-width: 1000px){
+            //position: relative;
+            margin-left: 25%;
+            //margin-right: 33%;
+        }
     }
     img{
         opacity: 55%;
@@ -469,15 +479,17 @@ time {
 //FOOTER
 footer{
     text-align:center;
-    height: 200px;
+    height: 250px;
     background-color: black;
     color: white;
     font-family: 'News Cycle', sans-serif;
     font-size: 20px;
     p{
         padding-top: 2em;
+        margin-bottom: 0;
     }
     img{
+        margin-top: 30px;
         border-radius: 5px;
     }
 }
