--- a/style/style.scss
+++ b/style/style.scss
@@ -340,7 +340,7 @@ time {
     h3{
         margin-top: 3em;
         text-align: center;
-        color:  black;
+        color:  rgb(0, 0, 0);
         font-family: 'Quicksand', sans-serif;
         font-weight: 900;
     }
