--- a/style/style.scss
+++ b/style/style.scss
@@ -317,15 +317,19 @@ time {
     ul{
         list-style: none;
         text-align: center;
+        margin-bottom: 3em;
     }
     li{
-        display: inline-flex;
+        display: inline-block;
         margin-left: 2em;
         margin-right: 2em;
         @media all and (max-width: 1000px){
             margin-left: 1em;
             margin-right: 1em;
         }
+    }
+    p{
+        font-size: 20px;
     }
 }
 .computer_div{
