--- a/style/style.scss
+++ b/style/style.scss
@@ -132,10 +132,22 @@ header{
         display: inline-block;
         margin: 0;
         padding: 0;
-        @media all and (max-width: 1000px){
-            //position: relative;
-            margin-left: 25%;
-            //margin-right: 33%;
+        @media all and (max-width: 1900px){
+            margin-left: 15%;
+            //margin-right: 3%;
+        }
+        @media all and (max-width: 1410px){
+            margin-left: 10%;
+        }
+        @media all and (max-width: 1200px){
+            margin-left: 8%;
+        }
+        @media all and (max-width: 1112px){
+            margin-left: 30%;
+        }
+        @media all and (max-width: 500px){
+            margin-left: 13%;
+            margin-right: 3em;
         }
     }
     img{
@@ -170,6 +182,9 @@ header{
             margin-left: 1em;
             margin-right: 1em;
         }
+    }
+    img{
+        opacity: 60%;
     }
     p{
         margin-top: 2em;
